Criacao do Middleware de Autenticacao do Usuario
