# src/routes/usuario.js
@@ -4,11 +4,13 @@ const tratarErrosEsperados = require('../functions/tratarErrosEsperados');
 const bcrypt = require('bcrypt');
 const EsquemaUsuario = require('../models/usuario');
 const router = express.Router();
+const jwt = require('jsonwebtoken');
+const authUser = require('../middlewares/authUser');
 
 /* GET users listing. */
 
-/* Criar algo, fazer login */
-router.post('/criar', conectarBancoDados, async function(req, res) {
+/* POST Criar algo, fazer login */
+router.post('/criar', authUser, conectarBancoDados, async function(req, res) {
   try{
     //#swagger.tags = ['Usuario']
     // já aparece na documentação
@@ -22,8 +24,6 @@ router.post('/criar', conectarBancoDados, async function(req, res) {
       resposta: respostaBD
     })
 
-
-
   }
   catch (error) {
     if (String(error).includes("email_1 dup key")){
@@ -33,5 +33,43 @@ router.post('/criar', conectarBancoDados, async function(req, res) {
     return tratarErrosEsperados(res, error)
   }
 });
+
+
+router.post('/logar', conectarBancoDados, async function (req, res) {
+  try {
+    // #swagger.tags = ['Usuario']
+    let { email, senha } = req.body;
+
+    let respostaBD = await EsquemaUsuario.findOne({ email }).select('+senha');
+    if (respostaBD) {
+
+      //verificando a senha, o '+' garante a seleção pois o padrão é estar oculto
+      let senhaCorreta = await bcrypt.compare(senha, respostaBD.senha);
+      if (senhaCorreta) {
+        
+        //token é necessario para gerar um token de autenticação
+        let token = jwt.sign({ id: respostaBD._id }, process.env.JWT_SECRET, { expiresIn: '1d' })
+
+
+        res.header('x-auth-token', token);
+        res.status(200).json({
+          status: "OK",
+          statusMensagem: "Usuário autenticado com sucesso...",
+          resposta: { "x-auth-token": token }
+        });
+      } else {
+        // raise a error = throw
+        throw new Error("Email ou senha incorreta...");
+      }
+    } else {
+      throw new Error("Email ou senha incorreta...");
+    }
+  } catch (err) {
+    return tratarErrosEsperados(res, err);
+  }
+});
+
+
+
 
 module.exports = router;
